# lasd_libraries_v2

./: .gitignore  LICENSE  Makefile  README.md  build.sh  compile_clang++.bat  compile_g++.bat  main.cpp
.github/workflows/: semgrep.yml
BayesianNetwork/: bayesian_network.hpp  test.cpp
DirectedGraph/: README.md  api.md  graph.cpp  graph.hpp
DirectedGraph/examples/: compile_clang++.bat  compile_g++.bat  main.cpp
DirectedGraph/examples/a_star/: a_star.cpp
DirectedGraph/examples/dijkstra/: dijkstra.cpp
DirectedGraph/examples/dijkstra_opengl/: dijkstra.cpp  dijkstra.hpp
Graph/: graph.cpp  graph.hpp
LinkedList/: linked_list.cpp  linked_list.hpp
NeuraNova/: CMakeLists.txt  Makefile  Readme.md  activation_functions.cpp  layer.hpp  main.cpp  neural_network.cpp  neuron.cpp
NeuraNova/config/: ffconfig.json
NeuraNova/include/: activation.hpp  config.hpp  data.hpp  feedforward.hpp  layer.hpp  loss.hpp  network.hpp  optimizer.hpp  setup.hpp  utils.hpp
NeuraNova/results/ff/: results.json
NeuraNova/src/: activation.cpp  config.cpp  data.cpp  feedforward.cpp  layer.cpp  loss.cpp  network.cpp  optimizer.cpp  setup.cpp  utils.cpp
NeuraNova/test/: build.bat  test.cpp
NeuralNetwork/: activation_functions.cpp  activation_functions.hpp  layer.cpp  layer.hpp  neural_network.cpp  neural_network.hpp  neuron.cpp  neuron.hpp
myTest/: test.cpp  test.hpp
test/: test.cpp  test.hpp
test/NeuralNetwork/: activation_functions.cpp  activation_functions.hpp  neural_network.cpp  neural_network.hpp  neuron.cpp  neuron.hpp
test/NeuralNetwork/nn_test/: compile_nn_clang++.bat  nn_test.cpp  nn_test.hpp
